Modified some of the responsive css to better suit mobile devices. Making another attempt to address the issue of the nav-menu spilling out of the header-banner when tested on an iphoneXR.

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,6 @@ header {
   justify-content: center;
   align-items: center;
   height: 20vh;
-  min-height: fit-content;
   width: 100%;
   min-width: 375px;
   max-width: 100vw;
@@ -85,6 +84,7 @@ header {
 }
 
 .navMenu {
+  position: absolute;
   display: flex;
   position: absolute;
   justify-content: center;
@@ -238,9 +238,18 @@ footer a:hover {
   }
 }
 
+@media screen and (max-width: 1000px) {
+  .navMenu {
+    font-size: 2.5vh;
+  }
+
+  .description p {
+    font-size: 2.5vh;
+  }
+}
+
 @media screen and (min-width: 800px) {
   .description p {
     width: 550px;
-    font-size: 2.2vh;
   }
 }
